@startuml
skinparam packageStyle rectangle
package "solidexercicio10" {
  class Main
  package "service" {
    class JogoService
  }
  package "model" {
    class Missao
    class Nave
    abstract class Passageiro
    enum Dificuldade
  }
  package "presentation" {
    class MapaRenderer
  }
  package "repository" {
    interface RankingRepository
    class RankingArquivoRepository
    class RankingEntry
  }
}
Main --> JogoService : cria
Main --> RankingArquivoRepository : configura
JogoService --> RankingRepository : depende do contrato
JogoService --> model : executa regras
JogoService --> MapaRenderer : apresenta estado
RankingArquivoRepository ..|> RankingRepository
RankingArquivoRepository --> RankingEntry : lê e grava
RankingEntry --> Dificuldade
@enduml
